<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topPanelBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#e8e8e8" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="12dp"
            android:text="@string/lblnameD" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lblcodeD" />

        <TextView
            android:id="@+id/viewCodeD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/textView1"
            android:text="" />

        <TextView
            android:id="@+id/viewNameD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/viewCodeD"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/topMiddleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanelBar"
        android:background="#fafafa" >

        <TextView
            android:id="@+id/lblRegNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lblRegNo" />

        <EditText
            android:id="@+id/txtRegNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/lblRegNo"
            android:hint="@string/hntRegNo"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblNameStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblRegNo"
            android:layout_marginTop="15dp"
            android:text="@string/lblNameS" />

        <EditText
            android:id="@+id/txtNameS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRegNo"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/lblNameStudent"
            android:hint="@string/hntNameS"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblNameStudent"
            android:layout_marginTop="15dp"
            android:text="@string/lblEmail" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNameS"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/lblEmail"
            android:hint="@string/hntEmail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/delStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtEmail"
            android:text="@string/btnDeleteS" />

        <Button
            android:id="@+id/updateStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmail"
            android:layout_toLeftOf="@id/delStudent"
            android:text="@string/btnUpdateS" />

        <Button
            android:id="@+id/addStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmail"
            android:layout_toLeftOf="@id/updateStudent"
            android:text="@string/btnAddS" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/topBottomBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/topMiddleBar"
        android:background="#efefef" >

        <ListView
            android:id="@+id/studentListAll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>